# gha-llms-txt-action

./: CHANGELOG.md  README.md  action.yml  pyproject.toml
.github/workflows/: bats.yaml  test-action.yaml
tests/unit/: test_action.bats
