[project]
name = "gha-llms-txt-action"
version = "0.1.0"
description = "Composite GitHub Action to generate llms.txt from templates via envsubst"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "qte77", email = "qte@77.gh" }]

[tool.bumpversion]
current_version = "0.1.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
commit = false
tag = false
tag_name = "v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "README.md"
search = "version-{current_version}-8A2BE2"
replace = "version-{new_version}-8A2BE2"

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = "[Unreleased]"
replace = "[Unreleased]\n\n## [{new_version}] - {now:%Y-%m-%d}"
